# wikilinks_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md
src/: data_structures.rs  graph_render.rs  html_templates.rs  http.rs  macros.rs  main.rs  webserver.rs
templates/: entry.html  error.html  outline.html  submit.html
