[package]
name = "wikilinks_rust"
version = "0.1.0"
authors = ["Jax Arthur <jax@centracom.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
ahash = "0.7.3"
serde = {version = "1.0.126", features = ["derive"]}
bincode = "1.3.3"
flate2 = "1.0.20"
#tiny_http = "0.8.2"
url = "2.2.2"
#json = "0.12.4"
h2 = "0.3"
bytes = "1"
tokio = { version = "1", features = ["full"] }
askama = "0.10"